@@ -26,6 +26,10 @@
     replace the avt_import_* functions
   - avt_audio_t renamed to avt_audio
   - avt_get_font_char replaces get_font_char
+  - functions with changed API (color value):
+    avt_set_background_color, avt_get_background_color,
+    avt_set_balloon_color, avt_set_text_color,
+    avt_set_text_background_color
   - fixed avt_show_image_stream, avt_import_image_stream
   - new functions: avt_set_balloon_mode, avt_load_audio_part
   - avt_key(ch): ch may be NULL
